--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,3 +9,5 @@ jobs:
     - uses: actions/checkout@v2
     - run: brew style .
     - run: brew audit --strict Formula/*
+    - run: brew install Formula/*
+    - run: brew test Formula/*
