--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,7 @@ jobs:
   test:
     runs-on: macos-latest
     steps:
+    - uses: Homebrew/actions/setup-homebrew@master
     - uses: actions/checkout@v2
     - run: brew audit --strict Formula/*
     - run: brew install Formula/*
