--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,9 +7,11 @@ on:
 jobs:
   test-bot:
     strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
+      fail-fast: false
+      matrix: { os: [ubuntu-latest, macos-latest] }
+
     runs-on: ${{ matrix.os }}
+
     steps:
       - name: Set up Homebrew
         id: set-up-homebrew
